@startuml
title ERD logic - 4. Giáo án và buổi tập
hide circle
skinparam monochrome true
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam linetype polyline
skinparam nodesep 65
skinparam ranksep 100
top to bottom direction
entity "exercises" as exercises {
  id : bigint <<PK>>
}
entity "plan_muscle_group_weight" as plan_muscle_group_weight {
  id : bigint <<PK>>
  workout_plan_id : bigint <<FK>>
}
entity "session_exercise_logs" as session_exercise_logs {
  exercise_id : bigint <<FK>>
  id : bigint <<PK>>
  session_id : bigint <<FK>>
}
entity "users" as users {
  id : bigint <<PK>>
  role_id : bigint <<FK>>
  email : varchar <<UK>>
}
entity "weekly_reviews" as weekly_reviews {
  id : bigint <<PK>>
  user_id : bigint <<FK>>
  workout_plan_id : bigint <<FK>>
}
entity "workout_plan_days" as workout_plan_days {
  id : bigint <<PK>>
  workout_plan_id : bigint <<FK>>
}
entity "workout_plan_exercises" as workout_plan_exercises {
  exercise_id : bigint <<FK>>
  id : bigint <<PK>>
  last_low_adjustment_log_id : bigint <<REF>>
  plan_day_id : bigint <<FK>>
}
entity "workout_plans" as workout_plans {
  id : bigint <<PK>>
  original_plan_id : bigint <<REF>>
  user_id : bigint <<FK>>
}
entity "workout_sessions" as workout_sessions {
  id : bigint <<PK>>
  plan_day_id : bigint <<FK>>
  user_id : bigint <<FK>>
  workout_plan_id : bigint <<FK>>
}
workout_plans |o--o{ plan_muscle_group_weight
exercises |o--o{ session_exercise_logs
workout_sessions |o--o{ session_exercise_logs
users |o--o{ weekly_reviews
workout_plans |o--o{ weekly_reviews
workout_plans |o--o{ workout_plan_days
exercises |o--o{ workout_plan_exercises
workout_plan_days |o--o{ workout_plan_exercises
users |o--o{ workout_plans
workout_plan_days |o--o{ workout_sessions
users |o--o{ workout_sessions
workout_plans |o--o{ workout_sessions
workout_plans |o..o{ workout_plans
session_exercise_logs |o..o{ workout_plan_exercises
legend bottom
  Liền: FK hiện có. Nét đứt / REF: liên kết logic bổ sung.
  Bảng cùng tên ở các hình là cùng một bảng trong CSDL.
endlegend
@enduml
